refactor(rail): optimize RailAggregationService with locale-aware sorting and time-based rotation
- Replace duplicated group-by loops with generic collect() method
- Remove height-based ranking; use min-height gate (300px) instead
- Add locale-aware image scoring (en > hi > gu > titleless > other)
- Add deterministic clock-based poster/backdrop rotation (top 3, every 6h)
  - Restart-safe (wall clock), multi-instance consistent, CDN-cacheable
  - tmdbId mixed into seed for staggered per-movie rotation
- Add graceful degradation via exceptionally() on async tasks
- Hardcode artwork constants; remove external config dependency